add get user API to simplify the testing
